using System;

[Serializable]
public abstract class AIDecision
{
	
};

//Here will live all the decision possible for the AI, if the condition setup on the AIRule is reached, such as 
// Cast action X
// Move toward/away from the enemy
// Change behaviour mode
// etc etc