using System;

[Serializable]
public class EncounterUnit : CreatureUnit
{
	public AIBehaviour Behaviour;
};
